--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@mui/x-date-pickers": "^7.28.2",
     "@mui/x-tree-view": "^7.28.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tanstack/react-query": "^5.90.2",
     "@tiptap/core": "^2.11.6",
     "@tiptap/extension-code-block": "^2.11.6",
     "@tiptap/extension-code-block-lowlight": "^2.11.6",
