--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "sonner": "^2.0.2",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.21.8",
     "zod": "^3.24.2"
   },
