--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "docx": "^9.5.1",
     "es-toolkit": "^1.34.1",
     "framer-motion": "^12.6.1",
     "lowlight": "3.3.0",
